hphp/hack/test/typecheck/stdclass_final.php.exp
File "stdclass_final.php", line 3, characters 7-18:
You cannot extend final class stdClass (Typing[4035])
File "hhi_lib__srcs/classes.hhi", line 194, characters 13-20:
Declaration is here
